--- a/styles/menu-responsividade.css
+++ b/styles/menu-responsividade.css
@@ -1,4 +1,10 @@
 @media (max-width: 540px) {
+  section {
+    font-size: 90%;
+  }
+  section h1 {
+    font-size: 1.6rem;
+  }
   nav {
       display: none;
   }
