--- a/styles/post.css
+++ b/styles/post.css
@@ -52,9 +52,36 @@ section {
   text-align: justify;
 }
 
+.section__info {
+  display: flex;
+  align-items: center;
+  font-size: 0.8rem;
+  gap: 5px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
+}
+
+.section__info_author {
+  display: flex;
+  align-items: center;
+}
+
+.section__info_author img {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+.section__info_author span {
+  color: blueviolet;
+}
+
+
 section h1 {
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   font-weight: 800;
   font-size: 2rem;
 }
