--- a/styles/post.css
+++ b/styles/post.css
@@ -47,7 +47,7 @@ header nav ul li a:hover {
 
 section {
   margin: 0 auto;
-  padding: 4rem;
+  padding: 2.5rem 4rem;
   width: 980px;
   max-width: 100%;
   text-align: justify;
