--- a/styles/post.css
+++ b/styles/post.css
@@ -22,12 +22,11 @@ header .container {
   width: 90%;
   max-width: 980px;
   margin: auto;
-  padding: 1.25rem 0;
+  padding: 0.5rem 0;
 }
 
-header .container h4 {
-  padding: 1rem 0;
-  color: white;
+header .container img {
+  width: 8rem;
 }
 
 header nav ul {
